--- a/locales/de/zodiac.json
+++ b/locales/de/zodiac.json
@@ -2,7 +2,7 @@
 	"aries": {
 		"name": "Widder",
 		"element": 0,
-		"stone": "Blutstein"
+		"stone": "Heliotrop"
 	},
 	"taurus": {
 		"name": "Stier",
